# simple-social-media-app

./: README.md  main.py  pyproject.toml  test.db
app/: app.py  db.py  images.py  schema.py  user.py
